# VOIDWAVE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_ROADMAP.md  README.md  README_WAVE1.md  ROADMAP_EXECUTIVE_SUMMARY.md  ROADMAP_QUICKSTART.md  ROADMAP_VISUAL.md  SECURITY.md  TUI_IMPLEMENTATION_SUMMARY.md  TUI_QUICK_REFERENCE.md  WAVE1_IMPLEMENTATION.md  install-tools.sh  install.sh  pyproject.toml  reinstall-voidwave.sh  test_tui.py  uninstall.sh  validate_tui_structure.sh  voidwave  voidwave-install
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
backups/20251226_031402/lib/: config.sh  detection.sh  sessions.sh  version.sh  wireless.sh
backups/20251226_031402/modules/: osint.sh  scanning.sh  traffic.sh  wireless.sh
completions/: voidwave.bash  voidwave.fish  voidwave.zsh
data/: wps_pins.db
docs/: ENVIRONMENT_VARIABLES.md  HOWTO.md  NOTICE.txt  QUICKREF.md  README.md  SUPPORT.md  TOOL_REFERENCE.md  TROUBLESHOOTING.md  VOIDWAVE-FORGOTTEN-FEATURES.md
docs/man/: voidwave.1
lib/: automation.sh  core.sh  detection.sh  memory.sh  menu.sh  safety.sh  ui.sh  utils.sh  version.sh  wireless_loader.sh  wizards.sh
lib/attacks/: advanced.sh  dos.sh  enterprise.sh  eviltwin.sh  wps.sh
lib/cracking/: cracker.sh
lib/intelligence/: auto.sh  help.sh  preflight.sh  targeting.sh  wireless_menu_smart.sh
lib/menus/: creds_menu.sh  exploit_menu.sh  osint_menu.sh  recon_menu.sh  scan_menu.sh  settings_menu.sh  status_menu.sh  stress_menu.sh  traffic_menu.sh  wireless_menu.sh
lib/wireless/: mac.sh
modules/: credentials.sh  exploit.sh  recon.sh  stress.sh
src/voidwave/: __init__.py  __main__.py  cli.py
src/voidwave/attacks/: __init__.py
src/voidwave/automation/: __init__.py  engine.py  fallbacks.py  labels.py  preflight.py  requirements.py  subflows.py  tool_requirements.py
src/voidwave/chaining/: __init__.py  executor.py  models.py  paths.py  registry.py  transforms.py
src/voidwave/config/: __init__.py  defaults.toml  keys.py  settings.py
src/voidwave/core/: __init__.py  bootstrap.py  cleanup.py  constants.py  exceptions.py  logging.py
src/voidwave/db/: __init__.py  engine.py  schema.sql
src/voidwave/detection/: __init__.py  distro.py  interfaces.py  tools.py
src/voidwave/export/: __init__.py  exporters.py  manager.py
src/voidwave/loot/: __init__.py  storage.py
src/voidwave/orchestration/: __init__.py  control.py  events.py  handlers.py  semaphore.py  subprocess.py  workflow.py
src/voidwave/plugins/: __init__.py  base.py  discovery.py  lifecycle.py  registry.py
tests/: cli.bats  config.bats  conftest.py  detection.bats  help.bats  installer.bats  stress.bats  syntax.bats  test_helper.bash  test_menus.sh  whois.bats  wireless.bats  wordlist.bats
tests/integration/: test_cli.bats
tests/lib/: test_safety.bats
tests/smoke/: test_config.sh  test_help.sh  test_logs.sh  test_session.sh  test_status.sh  test_tools.sh  test_version.sh
tests/unit/: __init__.py  test_automation.py  test_constants.py  test_export.py  test_wireless.py
(+99 files in other folders)
