[project]
name = "voidwave"
version = "2.0.0"
description = "Offensive Security Framework with Modern TUI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["security", "pentesting", "wireless", "hacking", "tui"]
authors = [
    { name = "VOIDWAVE Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "pyee>=11.0.0",
    "transitions>=0.9.0",
    "typer>=0.9.0",
    "cryptography>=41.0.0",
    "keyring>=24.3.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "textual-dev>=1.2.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
distributed = [
    "redis>=5.0.0",
    "celery>=5.3.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
voidwave = "voidwave.cli:app"

[project.entry-points."voidwave.tools"]
# Built-in tools registered here
nmap = "voidwave.tools.nmap:NmapTool"
masscan = "voidwave.tools.masscan:MasscanTool"
hashcat = "voidwave.tools.hashcat:HashcatTool"
john = "voidwave.tools.john:JohnTool"
hydra = "voidwave.tools.hydra:HydraTool"

[project.entry-points."voidwave.attacks"]
# Built-in attacks registered here
wps = "voidwave.attacks.wps:WPSAttack"
handshake = "voidwave.attacks.handshake:HandshakeAttack"
pmkid = "voidwave.attacks.pmkid:PMKIDAttack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voidwave"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["scapy.*", "netifaces.*", "pyee.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=voidwave --cov-report=term-missing"

[tool.coverage.run]
source = ["src/voidwave"]
branch = true
